fixed -1 z-index problem for navigation

--- a/client/src/styles/replyModal.css
+++ b/client/src/styles/replyModal.css
@@ -238,9 +238,9 @@
   z-index: -1;
 } */
 
-.tweet-c__comment {
+/* .tweet-c__comment {
   z-index: -1;
-}
+} */
 
 .visible{
   display: block;
